namespace GameProject {
  public static class CharacterState {
    public const string Idle = "Idle";
    public const string Move = "Move";
    public const string Run = "Run";
    public const string Attack = "Attack";
    public const string AltAttack = "AltAttack";
    public const string GetHit = "GetHit";
    public const string Die = "Die";
  }
}
